# cmake_custom_command

./: CMakeLists.txt  README.md
sub1/: CMakeLists.txt  topheader.h
sub2/: CMakeLists.txt
